fix : 쿠폰 발급 로직 수정 #13